# luna-pathology

./: .gitignore  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.md  LICENSE  Makefile  README.rst  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.circleci/: config.yml
docs/: Makefile  cli.dsa.rst  cli.rst  common.rst  conf.py  data-eng-cli.rst  examples.rst  feature-generation-cli.rst  index.rst  installation.rst  luna_pathology.analysis.qupath.rst  luna_pathology.analysis.rst  luna_pathology.cli.dsa.rst  luna_pathology.cli.rst  luna_pathology.common.rst  luna_pathology.models.rst  luna_pathology.proxy_table.regional_annotation.rst  luna_pathology.proxy_table.rst  luna_pathology.refined_table.regional_annotation.rst  luna_pathology.refined_table.rst  luna_pathology.rst  make.bat  models.rst  modules.rst  path-cli.rst  usage.rst
luna_pathology/: __init__.py  cli.py
luna_pathology/cli/: collect_tile_segment.py  extract_slide_texture_features.py  generate_tile_labels.py  infer_tile_labels.py  load_slide.py  visualize_tile_labels.py
luna_pathology/cli/dsa/: dsa_api_handler.py  dsa_upload.py  dsa_viz.py  utils.py
luna_pathology/cli/dsa/examples/: example_bitmask_polygon_config.yaml  example_dsa_api_config.yaml  example_dsa_upload_config.yaml  example_heatmap_config.json  example_heatmap_config.yaml  example_qupath_polygon_config.yaml  example_regional_polygon_config.yaml  example_stardist_cell_config.yaml  example_stardist_polygon_config.yaml
luna_pathology/cli/examples/: generate_tile_labels_no_labels.json  generate_tile_labels_no_labels.yaml  generate_tile_labels_with_ov_labels.json  generate_tile_labels_with_ov_labels.yaml  infer_tile_labels_resnet18.json  infer_tile_labels_resnet18.yaml  visualize_model_inference.json  visualize_model_inference.yaml  visualize_tile_labels.yaml
luna_pathology/common/: annotation_utils.py  build_geojson.py  preprocess.py  slideviewer_client.py  utils.py
luna_pathology/models/: eng_tissuenet.py
luna_pathology/point_annotation/proxy_table/: generate.py
luna_pathology/point_annotation/refined_table/: generate.py
luna_pathology/proxy_table/: generate.py
luna_pathology/proxy_table/regional_annotation/: generate.py
luna_pathology/refined_table/regional_annotation/: dask_generate.py  generate.py
luna_pathology/spatial/: analysis.py  example.py  fov_metadata.tsv  p1=panCK+,p2=CD68+,I=Cell: PDL1 mean,R=60.npy  p1=panCK+,p2=CD8+,I=Cell: PDL1 mean.tsv  runK.py  sample_metadata.tsv  stats.py  transforms.py
tests/: __init__.py  test_luna_pathology.py
tests/luna_pathology/cli/: test_collect_tile_segment.py  test_generate_tile_labels.py  test_infer_tile_labels.py  test_load_slide.py  test_visualize_tile_labels.py
tests/luna_pathology/cli/dsa/: test_dsa_viz.py
tests/luna_pathology/cli/testdata/: collect_tile_results.json  collect_tile_results.yaml  dsa_upload.json  generate_tile_labels_no_labels.json  generate_tile_labels_no_labels.yaml  generate_tile_labels_with_ov_labels.json  load_slide.json  (+10 more)
tests/luna_pathology/common/: test_annotation_utils.py  test_build_bitmask.py  test_build_geojson.py  test_preprocess.py  test_slideviewer_client.py  test_utils.py
tests/luna_pathology/proxy_table/: data.yaml  test_generate.py
tests/luna_pathology/spatial/: test_stats.py
(+33 files in other folders)
